--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/leetcode/algorithm/backtracking/Combination.java=UTF-8
 encoding//src/leetcode/algorithm/dp/EditDistance.java=UTF-8
 encoding//src/leetcode/algorithm/queue/MyCircularQueue.java=UTF-8
 encoding//src/leetcode/algorithm/queue/RecentCounter.java=UTF-8
